[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/nivel_asteroides.gd" type="Script" id=1]
[ext_resource path="res://nave_nivel_meteoro/nave.tscn" type="PackedScene" id=2]
[ext_resource path="res://Effects/ParallaxBackground_nivel_asteroides.tscn" type="PackedScene" id=3]
[ext_resource path="res://Schrdinger.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Effects/ParallaxBackground_luna.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Portal.tscn" type="PackedScene" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 200.65, 0.13715, 0, 0, 0, 0, 200.886, 100.66 )
}

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 4 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="ParallaxLuna" parent="." instance=ExtResource( 5 )]

[node name="nave_meteoro" parent="." instance=ExtResource( 2 )]

[node name="RockTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 20, 50 )

[node name="RockPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="RockSpawnLocation" type="PathFollow2D" parent="RockPath"]
position = Vector2( 200.65, 0.13715 )
rotation = 1.56846

[node name="ParallaxEspacio" parent="." instance=ExtResource( 3 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[node name="label_tiempo" type="Label" parent="."]
margin_left = 90.9202
margin_top = 3.78978
margin_right = 118.92
margin_bottom = 17.7898
custom_fonts/font = SubResource( 2 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portal" parent="." instance=ExtResource( 6 )]
position = Vector2( 166.089, 49.6244 )
scale = Vector2( 1, 6.3 )
escena = "Nivel_Lander"
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
